@@ -2,6 +2,9 @@ Cascading Change Log
 
 2.7.0 [unreleased]
 
+  Fixed issue where c.t.TupleEntrySchemeIterator was not behaving correctly if #hasNext() is called multiple times
+  without calling #next().
+
   Fixed issue where c.f.h.ProcessFlow would not report Exceptions to registered FlowListeners.
 
   Fixed issue where a start/stop race condition in c.c.Cascade could allow a downstream c.f.Flow to start when a
